# striper-robot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROBOTICS_IDEAS.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: backup.yml  deploy-aws.yml  deploy-railway.yml  deploy-staging.yml  docker.yml  lint.yml  lua-check.yml  security.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260320_0001_enterprise_baseline.py  20260323_0002_cloud_ops.py  20260324_0003_robot_claims.py
archive/: docker-compose.yml
archive/striper_ws/src/striper_bringup/: CMakeLists.txt  package.xml
archive/striper_ws/src/striper_bringup/config/: nav2_params.yaml
ardurover/: README.md
ardurover/hoverboard/: setup.md
ardurover/lua/: fence_check.lua  motor_bridge.lua  obstacle_avoid.lua  paint_control.lua  paint_speed_sync.lua  paint_unified.lua  rangefinder_bridge.lua
ardurover/params/: striper.param
ardurover/sitl/: sim_striper.sh
backend/: Dockerfile  auth.py  config.py  database.py  main.py  metrics.py  orgs.py  postgres_runtime.py  rate_limit.py  requirements.txt  shared.py
backend/models/: commercial_schemas.py  schemas.py
backend/routers/: admin_router.py  auth_router.py  (+18 more)
dashboard/: requirements.txt
docs/: README.md  approved_sku_sheet.md  bom.md  business-plan.md  buying_guide.md  competitive_benchmarks.md  database_schema.md  deployment.md  failure_modes.md  maintenance.md  overengineering_analysis.md  parts_audit_best_possible.md  quick_start.md  research_report.md  topic_map.md  troubleshooting.md  validated_bom_v3.md  wiring_guide.md
e2e/: package.json  playwright.config.js
examples/: generate_parking_lot.py  render_robot.py  sample_lot.json  simulate_mission.py
firmware/: README.md
scripts/: backup_db.py  backup_db.sh  bootstrap_github_actions_deploy.ps1  build_workspace.sh  check_lua.sh  deploy.py  job_cost.py  migrate_sqlite_to_postgres.py  pathgen_cli.py  port_utils.py  rtk_setup.py  run_backend.py  run_dashboard.sh  run_playwright.py  run_simulation.sh  seed_admin.py  setup_wsl2_ros2.sh  sitl_test.py  smoke_check.py
site/: Dockerfile  admin.html  billing.html  claim.html  index.html  operations.html  platform.html  reports.html  settings.html
striper_pathgen/: setup.py
tools/: lot_planner.html  telemetry.html
(+196 files in other folders)
