[project]
name = "striper-robot"
version = "0.2.0"
description = "Autonomous parking lot line-painting (striping) robot — ArduRover + pathgen"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["striper_pathgen/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
