<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>striper_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the Striper parking lot line-painting robot</description>
  <maintainer email="dev@striper.local">striper-dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>striper_description</exec_depend>
  <exec_depend>striper_msgs</exec_depend>
  <exec_depend>striper_hardware</exec_depend>
  <exec_depend>striper_navigation</exec_depend>
  <exec_depend>striper_safety</exec_depend>
  <exec_depend>striper_simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
